# stakpark

./: .gitignore  Brewfile  Brewfile.lock.json  Makefile  README.md  compose.yaml  pyproject.toml
test/: a_test.go  go.mod  providers.tf.tmpl  terragrunt.hcl
test/envs/_example/: main.tf  providers.tf  terragrunt.hcl
