[tool.poetry]
name = "terrastor"
version = "0.1.0"
description = ""
authors = ["Rich Henning <richard.henning@warnermedia.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.10"
awscli-local = "^0.20"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
